src/test/resources/semantic/error/TC_ERROR_DOBLE_CONSTRUCTOR.ru
/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 11 | COLUMNA 5 | No se permite definir más de un constructor. Estructura 'A'. |
struct A{

}
impl A{
    .(Int a){

    }
    .(){}
}

start{

}